--- a/index.html
+++ b/index.html
@@ -19,6 +19,99 @@
 
 <body>
 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary container">
+        <div class="container my-nav">
+            <a class="navbar-brand" href="#"><img src="images/nav/Logo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <span><b>Delivery To:</b> <img src="images/nav/map-marker-alt.png" alt=""> </span><span>Current
+                            Location: <b> Mohammadpur Bus Stand, Dhaka</b></span>
+                    </li>
+                    <div class="button ms-auto">
+                        <button class="button-one"><img src="images/nav/Search.png" alt=""><span><b>Search
+                                    Food</b></span></button>
+                        <button class="button-two"><img src="images/nav/user.png"
+                                alt=""><span><b>Login</b></span></button>
+                    </div>
+            </div>
+        </div>
+    </nav>
+
+
+
+    <div class="container">
+        <div class="content">
+            <div class="row">
+                <div class="col">
+                    <div class="main-content">
+                        <div class="main-heading">
+                            <h1>Are you Staving?</h1>
+                            <p>Within a few clicks, find meals that are accessible near you</p>
+                        </div>
+                    </div>
+                    <div class="delivery">
+                        <div class="delivery-one">
+                            <div class="bike">
+                                <img src="images/delivery/bike.png" alt="">      <span><b>Delivery</b></span>
+                            </div>
+                            <div class="pickup">
+                                <img src="images/delivery/bag.png" alt=""><span>      <b>Pickup</b></span>
+                            </div>
+                        </div>
+                        <div class="adress">
+                            
+                            <img src="images/delivery/search orange.png" alt=""><span><input type="Email" value=""
+                                    placeholder="Enter Your Address"></span>
+                              
+                            <button class="orange-button">
+                                <img src="images/delivery/search white.png" alt=""><span>Find Food</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col pizza-img">
+                    <img src="images/pizza/Image.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
