--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="picture">
+            <img src="images/footer/Flash Deal Card (1).png" alt="">
+            <img src="images/footer/Flash Deal Card (2).png" alt="">
+            <img src="images/footer/Flash Deal Card (3).png" alt="">
+            <img src="images/footer/Flash Deal Card.png" alt="">
+        </div>
+
+
+    </div>
+
 
 
 
